--- a/WebProject/.classpath
+++ b/WebProject/.classpath
@@ -13,6 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="/home/jigyasa_yadav/Downloads/mysql-connector-j-8.1.0.zip"/>
+	<classpathentry kind="lib" path="/home/jigyasa_yadav/Downloads/jakarta.servlet.jsp.jstl-api-2.0.0.jar"/>
+	<classpathentry kind="lib" path="/home/jigyasa_yadav/Downloads/jakarta.servlet.jsp.jstl-2.0.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
