--- a/WebProject/src/main/webapp/WEB-INF/web.xml
+++ b/WebProject/src/main/webapp/WEB-INF/web.xml
@@ -2,23 +2,46 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
   <display-name>WebProject</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
+    <welcome-file>main.html</welcome-file>
   </welcome-file-list>
-  
-<!--       <servlet>
-        <servlet-name>RegistrationServlet</servlet-name>
-        <servlet-class>com.classss.pack.RegistrationServlet</servlet-class>
-    </servlet>
-
-    Map the servlet to a URL pattern
-    <servlet-mapping>
-        <servlet-name>RegistrationServlet</servlet-name>
-        <url-pattern>/RegistrationServlet</url-pattern>
-    </servlet-mapping> -->
-
+  <servlet>
+    <description></description>
+    <display-name>insert</display-name>
+    <servlet-name>insert</servlet-name>
+    <servlet-class>com.user.detail.insert</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>insert</servlet-name>
+    <url-pattern>/insert</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DeleteUSerServlet</display-name>
+    <servlet-name>DeleteUSerServlet</servlet-name>
+    <servlet-class>com.classss.deleteUser.DeleteUSerServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeleteUSerServlet</servlet-name>
+    <url-pattern>/DeleteUSerServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UpdateUserServlet</display-name>
+    <servlet-name>UpdateUserServlet</servlet-name>
+    <servlet-class>com.classss.update.UpdateUserServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UpdateUserServlet</servlet-name>
+    <url-pattern>/UpdateUserServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UpdateUserServlets</display-name>
+    <servlet-name>UpdateUserServlets</servlet-name>
+    <servlet-class>com.classss.update.UpdateUserServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UpdateUserServlets</servlet-name>
+    <url-pattern>/UpdateUserServlets</url-pattern>
+  </servlet-mapping>
 </web-app>
